--- a/IBM Model1.ipynb
+++ b/IBM Model1.ipynb
@@ -716,7 +716,7 @@
     "\n",
     "We’re still maximizing the likelihood of the observed data, but since the observed data no longer includes alignments, they’ve been left out of the third expression. To account for this we must marginalize them out in the fourth expression. In other words, since we don’t see the alignment, we add up the probabilities of all possible alignments that could have produced the data, because the rules of probability tell us that this gives us the marginal probability of $f$, which is the quantity that we want to maximize. This idea sounds promising, but introduces a slight wrinkle, in that the sum over the alignments prevents an analytic solution. This means that we’ll have to solve the problem algorithmically, but it’s going to turn out that the intuition behind the algorithm is very similar to the one for maximum likelihood.\n",
     "\n",
-    "Let's look more closely at the summation over alignments. Suppose that we want to estimate the parameter $p(f|e)$. Let's focus our attention on a sentence pair $\\langle {\\bf f}, {\\bf e}\\rangle$ for which French word $f_i=f$ and English word $e_j=e$. The sum over alignments of $\\langle {\\bf f}, {\\bf e}\\rangle$ includes many with a link between $f_i$ and $e_j$, and many without. A question we can ask is: *on average*, what percentage of the (exponentially many) alignments contain the link between $f_i$ and $e_j$. A formal way of asking this question is: what is the  *posterior probability*  $p(a_i=j|\\bf{f},\\bf{e})$ of an alignment link between $f_i$ and $e_j$? That is, given that we observe ${\\bf f}$ and ${\\bf e}$, what is the probability that there's a link between the two words? We also refer to $p(a_i=j|\\bf{f},\\bf{e})$ as the {\\it expected count} of the link, and we can calculate it with Bayes' rule.\n",
+    "Let's look more closely at the summation over alignments. Suppose that we want to estimate the parameter $p(f|e)$. Let's focus our attention on a sentence pair $\\langle {\\bf f}, {\\bf e}\\rangle$ for which French word $f_i=f$ and English word $e_j=e$. The sum over alignments of $\\langle {\\bf f}, {\\bf e}\\rangle$ includes many with a link between $f_i$ and $e_j$, and many without. A question we can ask is: *on average*, what percentage of the (exponentially many) alignments contain the link between $f_i$ and $e_j$. A formal way of asking this question is: what is the  *posterior probability*  $p(a_i=j|\\bf{f},\\bf{e})$ of an alignment link between $f_i$ and $e_j$? That is, given that we observe ${\\bf f}$ and ${\\bf e}$, what is the probability that there's a link between the two words? We also refer to $p(a_i=j|\\bf{f},\\bf{e})$ as the *expected count* of the link, and we can calculate it with Bayes' rule.\n",
     "\n",
     "$$p(a_i=j|{\\bf f},{\\bf e}) = \\frac{p({\\bf f}|a_i=j,{\\bf e}) p(a_i=j|{\\bf e})}{p({\\bf f}|{\\bf e})} = \\frac{p({\\bf f},a_i=j|{\\bf e})}{p({\\bf f}|{\\bf e})}$$\n",
     "\n",
@@ -728,11 +728,11 @@
     "Note that we’re able to cancel out the sentence length probability $p(I|J)$. Because $p(a_i|J)$ is uniform, the expression  $\\prod_{i=1}^I p(a_i|J)$ is constant across all alignments of the sentence, so we can also cancel it out. This leaves us with an expression written purely in terms of lexical translation probabilities, but both the numerator and denominator are sums over exponentially many terms. Let’s rewrite the equation slightly by enumerating the summations over each element of **a**.\n",
     "\n",
     "$$\\frac{\\displaystyle \\sum_{{\\bf a}:a_i=j} \\prod_{i'=1}^I p(f_{i'}|e_{a_{i'}})}{\\displaystyle \\sum_{{\\bf a}}\\prod_{i=1}^{I} p(f_i|e_{a_i})} = \n",
-    "\t\\frac{\\displaystyle p(f_i|e_j) \\sum_{a_1=0}^J ... \\sum_{a_{i-1}=0}^J \\sum_{a_{i+1}=0}^J ... \\sum_{a_{I}=0}^J \\prod_{i'=1:i'\\neq i}^I p(f_{i'}|e_{a_{i'}})}{\\displaystyle \\sum_{a_1=0}^J ...\\sum_{a_I=0}^J \\prod_{i=1}^{I} p(f_i|e_{a_i})}$$\n",
+    "\t\\frac{\\displaystyle p(f_i|e_j) \\sum_{a_1=1}^J ... \\sum_{a_{i-1}=1}^J \\sum_{a_{i+1}=1}^J ... \\sum_{a_{I}=1}^J \\prod_{i'=1:i'\\neq i}^I p(f_{i'}|e_{a_{i'}})}{\\displaystyle \\sum_{a_1=1}^J ...\\sum_{a_I=1}^J \\prod_{i=1}^{I} p(f_i|e_{a_i})}$$\n",
     "\n",
     "The denominator is a sum over products of exactly I terms, and we can exploit the regularity of these terms to simplify the expression. The summation over values of $a_1$ first requires $p(f_1|e_1)$ to be multiplied by all possible permutations of probabilities of translations of words $f_2$ through $f_I$. We then multiply $p(f_1|e_2)$ by all permutations, and so on. Exploiting distributivity, we can therefore move the sum over values of $a_1$ inside the product over values of $i$. We can then do the same for the sum over values of $a_2$, and so on. We can similarly manipulate sums and products in the numerator, and simplify by canceling most of the terms.\n",
     "\n",
-    "$$\\frac{\\displaystyle p(f_i|e_j) \\prod_{i'=1:i'\\neq i}^I \\sum_{a_{i'}=0}^J p(f_{i'}|e_{a_{i'}})}{\\displaystyle \\prod_{i=1}^{I} \\sum_{a_i=0}^J p(f_i|e_{a_i})} = \\frac{p(f_i|e_j)}{\\displaystyle \\sum_{a_i=0}^J p(f_i|e_{a_i})}$$\n",
+    "$$\\frac{\\displaystyle p(f_i|e_j) \\prod_{i'=1:i'\\neq i}^I \\sum_{a_{i'}=1}^J p(f_{i'}|e_{a_{i'}})}{\\displaystyle \\prod_{i=1}^{I} \\sum_{a_i=1}^J p(f_i|e_{a_i})} = \\frac{p(f_i|e_j)}{\\displaystyle \\sum_{a_i=1}^J p(f_i|e_{a_i})}$$\n",
     "\n",
     "You can inspect probabilities of an alignment links existing between a Foreign word token and all English tokens by executing the next cell. Pick an iteration, sentence pair, and Foreig word by changing the function arguments."
    ]
@@ -1070,9 +1070,9 @@
     "           TASK 3\n",
     "    make null alignments possible\n",
     "************************************************* \n",
-    "So far we've assumed that each Foreign word is aligned to exactly one English word. However, it's easy to come up with sentence pairs in which for some foreign word there is no source on the English side. For instance, the Polish question particle *czy* in *czy to jest smaczne?* has no equivalent in *is it tasty?*. If we forced *czy* to align to one of the English words we would be in error. Instead, we can append a null token onto the English sentence, to which all target words with no clear source equaivalent can align. If $a_{i} = 0$, this means that $f_{i}$ is not aligned to any word in the English sentence, called null alignment.\n",
+    "So far we've assumed that each Foreign word is aligned to exactly one English word. However, it's easy to come up with sentence pairs in which for some foreign word there is no source on the English side. For instance, the Polish question particle *czy* in *Czy to jest smaczne?* has no equivalent in *Is it tasty?*. If we forced *czy* to align to one of the English words we would be in error. Instead, we can append a null token onto the English sentence, to which all target words with no clear source equaivalent can align. If $a_{i} = 0$, $f_{i}$ is aligned to the null token.\n",
     "\n",
-    "You task is to modify the model to accomodate null alignment. You can do this by simply pretending that each English sentence has an extra word in it at position 0, and treat it like any other English word.\n",
+    "You task is to modify the model to accomodate null alignment. You can do this by simply pretending that each English sentence has an extra *\"null\"* word in it at position 0, and treat it like any other English word.\n",
     "\n",
     "To inspect the behaviour of your new model, you should change the data file to data/dev-test-train-null.pl-en"
    ]
@@ -1115,7 +1115,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1129,7 +1129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
